Goal 11: an interpreter is confined the way the one that started it was
system/options/boot is a launcher an interpreter writes for itself, and a
script given one directory could start a copy of itself that had the whole
machine -- and write anywhere through it. Confinement a script can step out
of by running its own name is not confinement. The launcher now carries
--root, and the second interpreter is bounded as the first is.

Which also makes a path mean the same thing on both sides, and that is what
lexer-test.r3's last entry needed. A confined script sees
%/units/files/x.r3; handing that to a child rooted somewhere else names
nothing, and to a child rooted the same way names the same file. A rooted
run reads every path it is given inside its root, and reports its own
paths the same way -- system/options/script, /path and what-dir all count
from the root rather than from the machine.

And a script is decoded rather than read as text, so a byte order mark at
the front is not part of it. LOAD of a binary already drops it; the command
line did not, and a file written by an editor that marks its encoding
failed on its own first line.

lexer-test.r3 is empty. Goal 11 has ten left, all in thru-cache-test.r3.